tests/lean/classBadOutParam.lean.expected.out
classBadOutParam.lean:2:6-2:8: error: invalid class, parameter #2 depends on `outParam`, but it is not an `outParam`
